<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">哇啦</string>
    <string name="home_error">发现加载失败</string>
    <string name="home_loading">正在加载发现...</string>
    <string name="home_empty">暂无发现</string>
    <string name="see_more">查看全部</string>
    <string name="login">登录</string>
    <string name="other_account">或使用下列社交账号登录</string>
    <string name="no_account">还没有账号？</string>
    <string name="come">赶快来注册一个吧</string>
    <string name="tencent_acount">腾讯微博</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="password">密码</string>
    <string name="submit">提 交</string>
    <string name="nickname">昵称</string>
    <string name="cancel">取 消</string>
    <string name="choice_aibum">从相册选择</string>
    <string name="choice_camera">拍 照</string>
    <string name="participation">立即参与</string>
    <string name="activity_loading">正在加载活动&#8230;</string>
    <string name="activity_error">活动加载失败</string>
    <string name="see_all">查看全部</string>
    <string name="star_dynamic">明星动态加载失败</string>
    <string name="star_dynamic_loading">正在加载动态&#8230;</string>
    <string name="star_topic_loading">正在加载话题&#8230;</string>
    <string name="best_new">最新</string>
    <string name="best_hot">最热</string>
    <string name="dynamic">动态</string>
    <string name="topics">话题</string>
    <string name="reply">回复</string>
    <string name="topic_detail_error">话题详情加载失败</string>
    <string name="topic_detail_loading">正在加载详情&#8230;</string>
    <string name="like">赞</string>
    <string name="posts">评论</string>
    <string name="edit_hint">说点什么~</string>
    <string name="cancel_tip">是否放弃编辑该内容</string>
    <string name="cancel_dialog_dismiss">放弃编辑</string>
    <string name="cancel_dialog_continue">继续编辑</string>
    <string name="exchange">马上兑换</string>
    <string name="shipping_tips">为保证您兑换的商品能够及时的送达您的身边，请您认真填写下列信息。该信息仅作为派送商品使用，哇啦不会泄露给其他用户，请放心填写。</string>
    <string name="xingming">姓名</string>
    <string name="dianhua">电话</string>
    <string name="dizhiu">邮寄地址</string>
    <string name="delete_topic">删除该内容</string>
    <string name="report">举报</string>
    <string name="share_come">分享到</string>
    <string name="delete_topic_tip">是否删除该话题</string>
    <string name="delete">删除</string>
    <string name="message_error">消息加载失败</string>
    <string name="message_loading">正在加载消息&#8230;</string>
    <string name="look_over_topic">查看该话题</string>
    <string name="private_letter_error">私信加载失败</string>
    <string name="private_letter_loading">正在加载私信&#8230;</string>
    <string name="private_letter_detail_error">私信详情加载失败</string>
    <string name="private_letter_detail_loading">正在加载私信详情&#8230;</string>
    <string name="send">发 布</string>
    <string name="feed_error">动态加载失败</string>
    <string name="feed_loading">正在加载动态&#8230;</string>
    <string name="dynamic_error">动态加载失败</string>
    <string name="dynamic_loading">正在加载动态&#8230;</string>
    <string name="confirm_tip">确 定</string>
    <string name="jigen">番茄币</string>
    <string name="attention">关注</string>
    <string name="fen_si">粉丝</string>
    <string name="my_dynamic">我的动态</string>
    <string name="my_photoabum">我的相册</string>
    <string name="my_join_organiz">加入的组</string>
    <string name="my_self_information">私人信息</string>
    <string name="my_adddress">兑换商品的派送地址</string>
    <string name="my_setting">设置</string>
    <string name="my_fenmian">封面</string>
    <string name="my_nickname">昵称</string>
    <string name="my_gender">性别</string>
    <string name="my_signation">个性签名</string>
    <string name="change_head_photo">修改头像</string>
    <string name="cheng_face">修改封面</string>
    <string name="private_letter">私信</string>
    <string name="then_follow">已关注</string>
    <string name="follow">关注</string>
    <string name="follow_count">%s 关注</string>
    <string name="fans_count">%s 粉丝</string>
    <string name="choice_gender">选择性别</string>
    <string name="signa_hint">填写您的签名</string>
    <string name="choice_girls">女</string>
    <string name="choice_boys">男</string>
    <string name="photo_album_error">相册加载失败</string>
    <string name="clear_catch">清除缓存</string>
    <string name="feed_back">有问题 反馈给哇啦</string>
    <string name="check_update">检查更新</string>
    <string name="sign_out">退出当前账号</string>
    <string name="follow_erro">列表加载失败</string>
    <string name="follow_loading">正在加载列表&#8230;</string>
    <string name="update">更新</string>
    <string name="updateinfor">哇啦更新信息</string>
    <string name="setingnickname">设置您的昵称</string>
    <string name="member">成员</string>
    <string name="group_chat">聊天室</string>
    <string name="group_chat_tip">看看大家都在聊什么吧</string>
    <string name="group_chat_loading">正在加载聊天&#8230;</string>
    <string name="group_chat_error">聊天加载失败</string>
    <string name="crash_title">应用程序出现错误</string>
    <string name="crash_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="zhang_hao">手机号码</string>
    <string name="is_cancel_modify">是否放弃修改个人信息</string>
    <string name="cancel_modify">放弃修改</string>
    <string name="continue_modify">继续修改</string>
    <string name="scan_text">将指定图片放入框内,即可自动扫描</string>
    <string name="screen_shot_repeat">没有想要的,再来一次</string>
    <string name="submit_topic_share_tip">同步到</string>
    <string name="news">资讯</string>
    <string name="topic_error">话题加载失败</string>
    <string name="news_error">资讯加载失败</string>
    <string name="news_loading">正在加载资讯&#8230;</string>
    <string name="next">下一步</string>
    <string name="auth_code">验证码</string>
    <string name="afresh">重新发送</string>
    <string name="invite_auth">邀请验证</string>
    <string name="invite_code">邀请码</string>
    <string name="skip">跳 过</string>
    <string name="invite_success">验证成功</string>
    <string name="i_know">我知道了</string>
    <string name="invite_friend">邀请好友</string>
    <string name="binding_setting">绑定设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="error">加载失败</string>
    <string name="weixin_friend">微信好友</string>
    <string name="weixin_friend_circle">微信朋友圈</string>
    <string name="no_binding_mobile_tip">绑定手机号,邀请更多好友一起玩</string>
    <string name="binding_mobile">绑定手机号</string>
    <string name="mobile">手机</string>
    <string name="binding">绑定</string>
    <string name="message_empty">暂无消息</string>
    <string name="buy">购 买</string>
    <string name="immediate_open">立刻开启</string>
    <string name="conversion">兑 换</string>
    <string name="share">分享</string>
    <string name="repeat">再来一次</string>
    <string name="get_award">领取奖励</string>
    <string name="pass">通过</string>
    <string name="elimination">淘汰</string>
    <string name="register">注 册</string>
    <string name="using_help">使用帮助</string>
    <string name="tip">提示</string>
    <string name="rob_ticket_tip_info">哎呀呀，需要一把梦之钥才能开宝箱</string>
    <string name="un_bind_tip">确定取消绑定吗?</string>
    <string name="append">添加</string>
    <string name="network_error">当前网络不可用,请检查网络</string>
    <string name="newest">最新</string>
    <string name="hot">热门</string>
    <string name="full_text">全文</string>
    <string name="home_search_hint">搜索哇友</string>
    <string name="topic_delete">删除该话题</string>
    <string name="please_wait">请稍候</string>
    <string name="get_score_hint">如何获得番茄币</string>
    <string name="search">搜索</string>
    <string name="forget_password">忘记密码</string>
    <string name="new_password">现有密码</string>
    <string name="setting_new_password">设置新密码</string>
    <string name="repeat_new_password">重复新密码</string>
    <string name="modify_password">修改密码</string>
</resources>
