<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/corner_edit"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/icon_loginuser_tomato"
            android:drawablePadding="8dp"
            android:hint="@string/zhang_hao"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/hintcolor"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/corner_edit"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/icon_password_tomato"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/hintcolor"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/corner_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/no_account"
                android:textColor="@color/hintcolor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/come"
                android:textColor="@color/loginbutton"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/other_account"
            android:textColor="@color/hintcolor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/sina_weibo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/corner_sina_button">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/icon_sian_tomato" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/sina_weibo"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tencent_weibo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/corner_qq_button">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/icon_qq_tomato" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/tencent_acount"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="@color/white_grey"
            android:textSize="14sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/forget_password"/>

    </LinearLayout>
</ScrollView>