<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shipp_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/shipping_tips"
            android:textColor="@color/hintcolor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/corner_edit"
            android:hint="@string/xingming"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/hintcolor"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_telphone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/corner_edit"
            android:hint="@string/dianhua"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/hintcolor"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_address"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/corner_edit"
            android:drawableLeft="@drawable/transparent"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/transparent"
            android:gravity="left"
            android:hint="@string/dizhiu"
            android:textColor="@color/hintcolor"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/corner_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
