<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/modify_password_now"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/corner_edit"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/hintcolor"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/modify_password_setting_new"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/corner_edit"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/setting_new_password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/hintcolor"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/modify_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/corner_edit"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/hintcolor"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/modify_password_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/corner_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>