<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7f000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dip"
        android:layout_marginRight="32dip"
        android:background="@drawable/bdg_pop_tomato"
        android:layout_centerInParent="true"
        android:orientation="vertical" >
        
   <!--     <View android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/search_tab_selector_color"/>-->



            <TextView
                android:id="@+id/choice_boy"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:gravity="center"
                android:text="@string/choice_boys"
                android:textColor="@color/hintcolor"
                android:textSize="16sp" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dip"
                 android:background="@color/view_color"/>
            <TextView
                android:id="@+id/choice_girl"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:gravity="center"
                android:text="@string/choice_girls"
                android:textColor="@color/hintcolor"
                android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/view_color"/>

            <TextView
                android:id="@+id/choice_cancel"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/hintcolor"
                android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>